Sonar issues in drg