@@ -5,6 +5,10 @@ import java.util.List;
 import tops.engine.TopsStringFormatException;
 
 public class Utilities {
+    
+    private Utilities() {
+        // prevent instantiation
+    }
 	
     public static String[] doInserts(String[][] inserts) {
         String[] result = null;
@@ -17,7 +21,7 @@ public class Utilities {
             }
         }
         if (firstNonNull == -1)
-            return null;
+            return new String[] {};
         
         // they should all be the same length!
         for (int i = 0; i < inserts[firstNonNull].length; i++) { 
@@ -25,16 +29,13 @@ public class Utilities {
             // fill with the first in matrix
             for (int j = 1; j < inserts.length; j++) { // for each array in the matrix
                 int l = result[i].length();
-                if (inserts[j] != null) {
-                    if (inserts[j][i] != null) {
-                    	// the current position in the current row
-                        String tmp = inserts[j][i]; 
-                        try {
-                            result[i] = Utilities.getLCS(
-                            		Utilities.LCS(result[i], tmp), result[i], l, tmp.length());
-                        } catch (ArrayIndexOutOfBoundsException aioobe) {
-                            System.out.println(aioobe);
-                        }
+                if (inserts[j] != null && inserts[j][i] != null) {
+                    // the current position in the current row
+                    String tmp = inserts[j][i]; 
+                    try {
+                        result[i] = getLCS(lcs(result[i], tmp), result[i], l, tmp.length());
+                    } catch (ArrayIndexOutOfBoundsException aioobe) {
+                        System.out.println(aioobe);
                     }
                 }
             }
@@ -42,9 +43,9 @@ public class Utilities {
         return result;
     }
 
-    public static int[][] LCS(String V, String W) {
-        int n = V.length() + 1; // "l + 1" because of the terminal 0's
-        int m = W.length() + 1;
+    public static int[][] lcs(String v, String w) {
+        int n = v.length() + 1; // "l + 1" because of the terminal 0's
+        int m = w.length() + 1;
         int[][] b = new int[n][m]; // 0 = DIAGONAL, 1 = UP, -1 = ACROSS
         int[][] s = new int[n][m];
 
@@ -61,7 +62,7 @@ public class Utilities {
             for (int j = 1; j < m; ++j) {
             	
             	// "i - 1" because strings start at 0
-                if (V.charAt(i - 1) == W.charAt(j - 1)) { 
+                if (v.charAt(i - 1) == w.charAt(j - 1)) { 
                     s[i][j] = s[i - 1][j - 1] + 1;
                     b[i][j] = 0;
 
@@ -79,19 +80,19 @@ public class Utilities {
         return b;
     }
 
-    public static String getLCS(int[][] b, String V, int i, int j) {
+    public static String getLCS(int[][] b, String v, int i, int j) {
         String result = "";
         if ((i == 0) || (j == 0))
-            return new String();
+            return "";
 
         if (b[i][j] == 0)
-            result += Utilities.getLCS(b, V, i - 1, j - 1) + V.charAt(i - 1);
+            result += getLCS(b, v, i - 1, j - 1) + v.charAt(i - 1);
 
         else if (b[i][j] == 1)
-            result += Utilities.getLCS(b, V, i - 1, j); // + '-';
+            result += getLCS(b, v, i - 1, j);
 
         else
-            result += Utilities.getLCS(b, V, i, j - 1); // + '|';
+            result += getLCS(b, v, i, j - 1);
 
         return result;
     }
@@ -117,60 +118,58 @@ public class Utilities {
     public static float doCompression(Pattern[] instances, Pattern p) {
         //compression calculations
         int elements = p.vsize() + p.esize();
-        int total_things = 0;
-        for (int i = 0; i < instances.length; i++) { total_things += instances[i].vsize() + instances[i].esize(); }
-        int min_things = getMinThings(instances);
-        int Craw = total_things - (elements * (instances.length - 1));
+        int totalThings = 0;
+        for (int i = 0; i < instances.length; i++) { totalThings += instances[i].vsize() + instances[i].esize(); }
+        int minThings = getMinThings(instances);
+        int cRaw = totalThings - (elements * (instances.length - 1));
 
-        int tmp1 = total_things - Craw;
-        int tmp2 = total_things - min_things;
+        int tmp1 = totalThings - cRaw;
+        int tmp2 = totalThings - minThings;
 
-        float Cnorm = 1 - ((float)tmp1 / (float)tmp2);
-        return Cnorm;
+        // normalise
+        return  1 - ((float)tmp1 / (float)tmp2);
     }
 
     public static float doDrgCompression(Pattern[] instances, Pattern p) {
-        int pattern_SSE = p.vsize();
-        int pattern_HBond = p.getNumberOfHBonds();
-        int pattern_Chiral = p.getNumberOfChirals();
+        int patternSSE = p.vsize();
+        int patternHBond = p.getNumberOfHBonds();
+        int patternChiral = p.getNumberOfChirals();
 
-        int instanceTotal_SSE = 0;
-        int instanceTotal_HBond = 0;
-        int instanceTotal_Chiral = 0;
+        int instanceTotalSSE = 0;
+        int instanceTotalHBond = 0;
+        int instanceTotalChiral = 0;
 
-        int minimum_SSE = Integer.MAX_VALUE;
-        int minimum_HBond = Integer.MAX_VALUE;
-        int minimum_Chiral = Integer.MAX_VALUE;
+        int minimumSSE = Integer.MAX_VALUE;
+        int minimumHBond = Integer.MAX_VALUE;
+        int minimumChiral = Integer.MAX_VALUE;
 
         for (int i = 0; i < instances.length; i++) { 
-            int instance_SSE = instances[i].vsize();
-            int instance_HBond = instances[i].getNumberOfHBonds();
-            int instance_Chiral = instances[i].getNumberOfChirals();
+            int instanceSSE = instances[i].vsize();
+            int instanceHBond = instances[i].getNumberOfHBonds();
+            int instanceChiral = instances[i].getNumberOfChirals();
 
-            instanceTotal_SSE += instance_SSE;
-            instanceTotal_HBond += instance_HBond;
-            instanceTotal_Chiral += instance_Chiral;
+            instanceTotalSSE += instanceSSE;
+            instanceTotalHBond += instanceHBond;
+            instanceTotalChiral += instanceChiral;
 
-            minimum_SSE = Math.min(minimum_SSE, instance_SSE);
-            minimum_HBond = Math.min(minimum_HBond, instance_HBond);
-            minimum_Chiral = Math.min(minimum_Chiral, instance_Chiral);
+            minimumSSE = Math.min(minimumSSE, instanceSSE);
+            minimumHBond = Math.min(minimumHBond, instanceHBond);
+            minimumChiral = Math.min(minimumChiral, instanceChiral);
         }
 
-        int cRaw_SSE = rawScore(instanceTotal_SSE, pattern_SSE, instances.length);
-        int cRaw_HBond = rawScore(instanceTotal_HBond, pattern_HBond, instances.length);
-        int cRaw_Chiral = rawScore(instanceTotal_Chiral, pattern_Chiral, instances.length);
+        int cRawSSE = rawScore(instanceTotalSSE, patternSSE, instances.length);
+        int cRawHBond = rawScore(instanceTotalHBond, patternHBond, instances.length);
+        int cRawChiral = rawScore(instanceTotalChiral, patternChiral, instances.length);
 
-        float cNorm_SSE = normalizedScore(instanceTotal_SSE, cRaw_SSE, minimum_SSE);
-        float cNorm_HBond = normalizedScore(instanceTotal_HBond, cRaw_HBond, minimum_HBond);
-        float cNorm_Chiral = normalizedScore(instanceTotal_Chiral, cRaw_Chiral, minimum_Chiral);
+        float cNormSSE = normalizedScore(instanceTotalSSE, cRawSSE, minimumSSE);
+        float cNormHBond = normalizedScore(instanceTotalHBond, cRawHBond, minimumHBond);
+        float cNormChiral = normalizedScore(instanceTotalChiral, cRawChiral, minimumChiral);
 
-        if ((new Float(cNorm_SSE)).isNaN()) { cNorm_SSE = 0; }
-        if ((new Float(cNorm_HBond)).isNaN()) { cNorm_HBond = 0; }
-        if ((new Float(cNorm_Chiral)).isNaN()) { cNorm_Chiral = 0; }
+        if ((Float.valueOf(cNormSSE)).isNaN()) { cNormSSE = 0; }
+        if ((Float.valueOf(cNormHBond)).isNaN()) { cNormHBond = 0; }
+        if ((Float.valueOf(cNormChiral)).isNaN()) { cNormChiral = 0; }
 
-        float cTotal = (cNorm_SSE + cNorm_HBond + cNorm_Chiral) / 3;
-        return cTotal;
-        //return cTotal + "\t" + cNorm_SSE + "\t" + cNorm_HBond + "\t" + cNorm_Chiral;
+        return (cNormSSE + cNormHBond + cNormChiral) / 3;
     }
 
     public static int rawScore(int instanceTotal, int patternTotal, int numberOfInstances) {
